2005-05-13  Albert Chu  <chu11@llnl.gov>
	 
        * src/Genders/Makefile.am: Cleanup and fix build.
 
        * src/Genders/Makefile.PL: Removed file.

	* configure.ac: Add search for pod2man.
		
2005-05-10  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Update library versions.
	
2005-05-06  Albert Chu  <chu11@llnl.gov>

	* Various code cleanup and header file re-organization.
	
2005-04-22  Albert Chu  <chu11@llnl.gov>

	*  Various code, autoconf, and makefile cleanup.
	
2005-02-03  Albert Chu  <chu11@llnl.gov>

	* tagged pre_dist2_err_msg_cleanup

	* dist/dist2: Cleaned up error message output.
	
	* tagged post_dist2_err_msg_cleanup

2005-01-10  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/hostlist.h, src/libgendersllnl/hostlist.c:
	Updated libraries.

        * src/Libgendersllnl/Makefile.am, src/Gendersllnl/Makefile.am: Cleanup.

        * gendersllnl.spec.in: Fix a Perl Extensions packaging problem for
	multilib systems.

        * src/libgendersllnl/Makefile.am, configure.ac: Move versioning
	info into configure.ac.

        * configure.ac: Added Perl versioning.

        * src/Libgendersllnl/Libgendersllnl.pm: Renamed to
	Libgendersllnl.pm.in and added versioning.

        * src/Gendersllnl/Gendersllnl.pm: Renamed to Gendersllnl.pm.in and
	added versioning.
	
2005-01-05  Albert Chu  <chu11@llnl.gov>

	* dist/dist2 (emit_definition, participating_nodes, usage): Revert
	behavior of -l option (i.e. dist_local) back to the
	gendersllnl-1-5-2 behavior.  Changed the -L option to -H option. A
	new -L option runs rdist on the localhost without a network
	connection.

	* man/dist/dist2.1, man/dist/dist_local.1: Fix for modifications
	in behavior.

	* META: Updated for new release

	* tagged gendersllnl-1-6-0-pre2
	
2005-01-03  Albert Chu  <chu11@llnl.gov>
	
	* tagged gendersllnl-1-6-0-pre1

2004-12-29  Albert Chu  <chu11@llnl.gov>

	* Makefile.am: distcheck fix.
	
2004-12-20  Albert Chu  <chu11@llnl.gov>
